<resources>
    <string name="app_name">Blockat</string>
    <string name="facebook_app_id" translatable="false">2387782768031868</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2387782768031868</string>
    <string name="pushwoosh_app_id_live" translatable="false">0C78A-3746B</string>
    <string name="pushwoosh_app_id_test" translatable="false">AA582-8A763</string>
    <string name="pushwoosh_sender_id_live" translatable="false">1095320028880</string>
    <string name="pushwoosh_app_scanner_id_live" translatable="false"></string>
    <string name="pushwoosh_app_scanner_id_test" translatable="false"></string>
    <string name="branch_io_test_key" translatable="false">key_test_ko1iYhisq73el7gf0Fb6nakfyrgEeVAC</string>
    <string name="branch_io_test_host" translatable="false">dl.blockatapp.com</string>
    <string name="branch_io_test_alternate_host" translatable="false">fu7wv-alternate.test-app.link</string>
    <string name="branch_io_live_key" translatable="false">key_live_hbXkZlbtD5Xbp0lc1sa4eibgvrdyaHvo</string>
    <string name="branch_io_live_host" translatable="false">dl.blockatapp.com</string>
    <string name="branch_io_live_alternate_host" translatable="false">fu7wv-alternate.app.link</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_music">Musicians</string>
    <string name="menu_celebrities">Celebrities</string>
    <string name="menu_brand">Brands</string>
    <string name="menu_categories">DISCOVER</string>
    <string name="menu_cart">My Bag</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_lang">عربى</string>
    <string name="menu_country">Change Country</string>
    <string name="menu_tv_products">TV Products</string>
    <string name="account">Account</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_avenue">Blocks</string>
    <string name="bottom_menu_stars">Talents</string>
    <string name="bottom_menu_brand">Brands</string>
    <string name="bottom_menu_cart">My Bag</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="KWD">KWD</string>
    <string name="QAR">QR</string>
    <string name="SAR">SAR</string>
    <string name="USD">$</string>
    <string name="BHD">BHD</string>
    <string name="OMR">OMR</string>
    <string name="AED">AED</string>
    <string name="press_back_once_again_to_close_app">Press back once again to close app</string>
    <string name="size">Size :</string>
    <string name="faqs_title">FAQS</string>
    <string name="payment_options">Payment options</string>
    <string name="placed_on">Placed on</string>
    <string name="payment_method">Payment method</string>
    <string name="add_new_addres">Add New Address</string>
    <string name="select_governorate">Select Governorate</string>
    <string name="select_governorate_star">Select Governorate*</string>
    <string name="select_country_star">Select Country*</string>
    <string name="last_name">Last Name</string>
    <string name="empty_email">Please enter email address</string>
    <string name="save_address">SAVE ADDRESS</string>
    <string name="add_address">Add Address</string>
    <string name="incorrect_street_add">Please enter your street</string>
    <string name="incorrect_jadah_add">Please enter jadaah</string>
    <string name="incorrect_block">Please select Block</string>
    <string name="incoorect_governorate">Please select your governorate</string>
    <string name="incorrect_country">Please select your country</string>
    <string name="please_enter_valid_email_id">Please enter a valid email address</string>
    <string name="passwword_must_have_six_letters">Password should be atleast 6 characters</string>
    <string name="empty_bag">Your shopping bag is currently empty.</string>
    <string name="bag_total">Bag total</string>
    <string name="size_guide">Size guide</string>
    <string name="recent_search">Your recent searches</string>
    <string name="clear">Clear</string>
    <string name="move_to_wishlist">Move to wishlist</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="login">Login</string>
    <string name="sign_in_register">SIGN IN / REGISTER</string>
    <string name="my_orders">My Orders</string>
    <string name="account_details">My account details</string>
    <string name="user_already_registered">User with same email already exists.</string>
    <string name="contact_us">Contact Us</string>
    <string name="call">Call Us</string>
    <string name="sort_by">Sort by</string>
    <string name="recommended">Recommended</string>
    <string name="price_low_to_high">Price (Low To High)</string>
    <string name="price_high_to_low">Price (High To Low)</string>
    <string name="brand">Brands</string>
    <string name="apply">APPLY</string>
    <string name="apply_small">Apply</string>
    <string name="change_store">Change store</string>
    <string name="all">ALL</string>
    <string name="email_address">Enter your email id</string>
    <string name="email_address_star">Email Address*</string>
    <string name="signup_with_facebook">Signup with Facebook</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_characters">Please enter more than 2 characters</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="forgot_password_note">Please enter your registered email address\nand we\'ll help you reset your password.</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="password">Enter your password</string>
    <string name="please_enter_a_valid_email_id">Please enter a valid email address</string>
    <string name="current_password">Current Password</string>
    <string name="register">Register</string>
    <string name="enter_phone_number">Please enter your phone number</string>
    <string name="items_summary">ITEMS SUMMARY</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="mastercard_visa">VISA/MASTERCARD</string>
    <string name="free">FREE</string>
    <string name="cod_charges">COD Charges</string>
    <string name="details">Details</string>
    <string name="invalid_password">Invalid password</string>
    <string name="error">There was an error while communicating with the server. Please try again</string>
    <string name="select_area">Select Area</string>
    <string name="select_area_start">Select Area*</string>
    <string name="select_block">Select Block</string>
    <string name="select_block_star">Select Block</string>
    <string name="Please_enter_email_address">Please enter your email address</string>
    <string name="phone_number">Enter your phone number</string>
    <string name="phone_number_star">Enter your phone number*</string>
    <string name="area">Area</string>
    <string name="block">Block*</string>
    <string name="enter_block">Enter Block</string>
    <string name="street">Street</string>
    <string name="jaddah">Jaddah</string>
    <string name="bag">Bag</string>
    <string name="why_not_check_out_whats_s_new">why not check out what\'s new?</string>
    <string name="move_to_wishlist_desc">Are you sure you want to move this item to wishlist?</string>
    <string name="delete_item_desc">Do you wish to remove this item from bag?</string>
    <string name="ok">OK</string>
    <string name="remove">Remove</string>
    <string name="filter">Filter</string>
    <string name="done">Done</string>
    <string name="reset_all">Reset all</string>
    <string name="sort">Sort</string>
    <string name="Password_successfully_reset">Your password has been sent to the registered email id</string>
    <string name="description">DESCRIPTION</string>
    <string name="proceed_to_purchase">proceed to purchase</string>
    <string name="forgot_pass">forgot password</string>
    <string name="cancel">Cancel</string>
    <string name="search_hint">Search</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yes_lang" translatable="false">نعم</string>
    <string name="no_lang">لا</string>
    <string name="order_details">Order Details</string>
    <string name="color_colon">Color:</string>
    <string name="size_colon">Size:</string>
    <string name="please_select_attribute">Please select color/size</string>
    <string name="please_add_address">Please add address.</string>
    <string name="please_select_payment">Please select payment method to proceed.</string>
    <string name="items_total">Items (%1$s)</string>
    <string name="item_total">Item (%1$s)</string>
    <string name="vat_charges">VAT</string>
    <string name="payment_gateway">Payment Gateway</string>
    <string name="order_summary">Order Summary</string>
    <string name="add_new_address">Add New Address</string>
    <string name="default_address">Default Address</string>
    <string name="my_address">My Address</string>
    <string name="incorrect_area">Please select your area</string>
    <string name="add_successfully_added">Your address has been saved successfully.</string>
    <string name="edit_address">Edit Address</string>
    <string name="address_successfully_updated">Your address has been updated successfully.</string>
    <string name="select_country">Select Country</string>
    <string name="save">Save</string>
    <string name="change_currency_alert_logged_out">Changing country will remove all items in your cart?</string>
    <string name="delete_item_wishlist_alert">Do you wish to remove this item from wishlist?</string>
    <string name="items_ordered">%1$s ITEM(S) ORDERED</string>
    <string name="empty_address_list_heading">Your address book is\ncurrently empty!</string>
    <string name="empty_address_list_"><u>Add a new address</u></string>
    <string name="empty_order_list_heading">Your order list is empty!</string>
    <string name="empty_product_list_heading">No products found!</string>
    <string name="empty_order_heading">No orders found</string>
    <string name="empty_wishlist">Your wishlist is empty!</string>
    <string name="email_not_found">Email id not found!</string>
    <string name="login_cancelled">Login cancelled by user!</string>
    <string name="login_unsuccessfull">Login unsuccessful!</string>
    <string name="qty_label">Qty</string>
    <string name="empty_items_list_heading">No items ordered</string>
    <string name="user_doesn_t_exists">User doesn\'t exist</string>
    <string name="loading">LOADING</string>
    <string name="step_2">Step 2/3</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="tip">Tip</string>
    <string name="manage_order_tip">Manage your order from "Account >> Order History" Section</string>
    <string name="view_order">View Order</string>
    <string name="rate_remember">Rate Blockat</string>
    <string name="rate_remember_text">If you enjoy using Blockat, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="no_thanks">No,Thanks</string>
    <string name="remind_me_later">Remind Me Later</string>
    <string name="change_address">Change Address</string>
    <string name="add_review_note">Please send us your valuable review.</string>
    <string name="title_star">Title*</string>
    <string name="comments_star">Comment*</string>
    <string name="tv">TV</string>
    <string name="guest_login">Continue as Guest</string>
    <string name="guest_login_msg"> If you dont have account,Sign in with your email address</string>
</resources>