<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_bg_selector"
        android:title="@string/bottom_menu_home"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_avenue"
        android:icon="@drawable/block_bg_selector"
        android:title="@string/bottom_menu_avenue"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_stars"
        android:icon="@drawable/star_bg_selector"
        android:title="@string/bottom_menu_stars"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_tv"
        android:icon="@drawable/tv_bg_selector"
        android:title="@string/tv"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/bag_bg_selector"
        android:title="@string/bottom_menu_cart"
        app:showAsAction="always|withText" />


</menu>
