<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context="com.app.blockaat.addressListingCart.AddressListingCartActivity">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_actionbar">

        <RelativeLayout
            android:id="@+id/relAddressBook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/relProgress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/forty_five_dp"
                android:background="@color/black"
                android:visibility="visible">

                <TextView
                    android:id="@+id/txtAddressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/ten_dp"
                    android:gravity="center"
                    android:text="@string/shipping_address"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/MediumTextSize" />

                <TextView
                    android:id="@+id/txtAddressStep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/ten_dp"
                    android:gravity="center"
                    android:text="@string/step_2"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/MediumTextSize" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txtChangeAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/forty_dp"
                android:layout_below="@+id/relProgress"
                android:layout_marginStart="@dimen/ten_dp"
                android:gravity="center_vertical"
                android:text="@string/change_address"
                android:textAllCaps="true"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/SubTitleTextSize" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCartAddressListing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtChangeAddress"
                android:background="@color/bg_color" />

            <TextView
                android:id="@+id/txtProceedToPurchase"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_size"
                android:layout_below="@+id/rvCartAddressListing"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:layout_marginBottom="@dimen/fifteen_dp"
                android:background="@drawable/rounded_corner_button_bg_blue"
                android:gravity="center"
                android:text="@string/proceed_to_purchase"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/btnTextSize" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linNoItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtNoAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/screen_margin"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_marginBottom="@dimen/screen_margin"
            android:text="@string/empty_address_list_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/MenuFontSize" />

        <TextView
            android:id="@+id/txtAddressEmptyDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/empty_address_list_"
            android:textAlignment="center"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/SubTitleTextSize" />
    </LinearLayout>

</RelativeLayout>