<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="@dimen/drawer_width"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:background="@drawable/rounded_corner_white_bg"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="@dimen/drawer_width"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/txtRateUsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:gravity="center"
                android:text="@string/rate_remember"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fifteen_dp" />




        <TextView
                android:id="@+id/txtRateUsMsg"
                android:text="@string/rate_remember_text"
                android:background="#05000000"
                android:textAllCaps="false"
                android:padding="@dimen/ten_dp"
                android:gravity="center"
                android:textSize="@dimen/TitleTextSize"
                android:textColor="@color/secondary_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/div_line_colr"
                android:layout_height="@dimen/divider_line_height"
                android:orientation="horizontal"/>

        <TextView
                android:id="@+id/txtRateItNow"
                android:text="@string/rate_remember"
                android:background="#05000000"
                android:padding="@dimen/ten_dp"
                android:textAllCaps="false"
                android:gravity="center"
                android:textSize="@dimen/TitleTextSize"
                android:textColor="@color/dialog_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/div_line_colr"
                android:layout_height="@dimen/divider_line_height"
                android:orientation="horizontal"/>

        <TextView
                android:id="@+id/txtRemindMe"
                android:text="@string/remind_me_later"
                android:textSize="@dimen/TitleTextSize"
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:background="#05000000"
                android:padding="@dimen/ten_dp"
                android:gravity="center"
                android:textColor="@color/dialog_btn"
                android:layout_height="wrap_content" />

        <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/div_line_colr"
                android:layout_height="@dimen/divider_line_height"
                android:orientation="horizontal"/>


        <TextView
                android:id="@+id/txtCancel"
                android:text="@string/no_thanks"
                android:background="#05000000"
                android:gravity="center"
                android:padding="@dimen/ten_dp"
                android:textAllCaps="false"
                android:textSize="@dimen/TitleTextSize"
                android:textColor="@color/dialog_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </LinearLayout>




</LinearLayout>